Fix remaining JDK 21+ API usages in camel-support
- Replace Executors.newThreadPerTaskExecutor() (JDK 21) with
  reflection in DefaultThreadPoolFactory VIRTUAL enum
- Replace Thread.threadId() (JDK 19) with Thread.getId() in
  ExpressionBuilder.threadIdExpression()

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>